se agregan asociaciones aun faltan

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+  	<p class="notice"><%= notice %></p> <!-- Estas lineas -->
+  	<p class="alert"><%= alert %></p>
+  	<!-- agregamos -->
     <%= yield %>
   </body>
 </html>
