--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.number_field :duration %>
   </div>
 
+  <div class="field">
+    <%= f.label :genre_id %>
+    <%= f.select :genre_id, Genre.all.map{|g| [g.name, g.id]}%>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
